Disallow node IP conflicts